Fixed code blocks

--- a/_posts/2014-10-31-vboxsf.md
+++ b/_posts/2014-10-31-vboxsf.md
@@ -1,9 +1,12 @@
 ---
 layout: post
+title: "Fix Virtual Box guest additions mounting a share"
 ---
 
-  * Broken symlink ''/sbin/mount.vboxsf'' -> ''/usr/lib/VBoxGuestAdditions/mount.vboxfs''
+  * Broken symlink `/sbin/mount.vboxsf` -> `/usr/lib/VBoxGuestAdditions/mount.vboxfs`
 
-<code bash>
-ln -sf /opt/VBoxGuestAdditions-4.3.10/lib/VBoxGuestAdditions/mount.vboxsf /sbin/mount.vboxsf
-</code>
+{% highlight c %}
+ln -sf /opt/VBoxGuestAdditions-4.3.10/lib/VBoxGuestAdditions/mount.vboxsf \
+    /sbin/mount.vboxsf
+{% endhighlight %}
+
