--- a/_posts/2014-12-03-cpp.md
+++ b/_posts/2014-12-03-cpp.md
@@ -6,7 +6,7 @@ title: "C++"
 
 ===== Initializers =====
 
-<file cpp>
+{% highlight  cpp %}
 int a;             // unitialized integer
 int b = int();     // b initialized to zero
 int c();           // (sic) declaration of function c returning int
@@ -14,5 +14,5 @@ int c();           // (sic) declaration of function c returning int
 Class a;           // calls default ctor
 Class b = Class(); // same as above
 Class c();         // again, function declaration
-</file>
+{% endhighlight %}
 
