--- a/_posts/2015-05-02-gcj-1b.md
+++ b/_posts/2015-05-02-gcj-1b.md
@@ -38,16 +38,16 @@ https://code.google.com/codejam/contest/8224486/dashboard#s=p1
   * **after contest**
     * Finally I found the mistakes:
       * Off-by-one error that was caused by my insecurity about some boundaries and I thought making them larger (+1) wouldn't change the solution. Obviously it did and without that +1 it was correct.
-      * I was using ''sizeof'' as if it returned size in bits instead of bytes.
+      * I was using `sizeof` as if it returned size in bits instead of bytes.
 
 ===== Lessons learned =====
 
-  * Prepare some templates with boilerplate code (includes, usings, ''main'') -- it takes time and interrupts attention.
+  * Prepare some templates with boilerplate code (includes, usings, `main`) -- it takes time and interrupts attention.
   * Better time management -- 20 minutes is not enought to write and debug even simple solution (because of the stress).
   * Stop refining solution that I know is inefficient and think about it once more (or have some pause, little distraction to refresh mind).
   * What the heck was efficient solution for the Noisy Neighbors?
     * Simple as breeze: chessboard pattern
-      * if ''N'' < ''R*C / 2'', I can distribute tenants without adjacency (chessboard pattern)
+      * if `N` < `R*C / 2`, I can distribute tenants without adjacency (chessboard pattern)
       * any neighbor that is more than the half goes to some field of the chessboard and it's always 4 neighbors (or less on building borders)
     * You must think better, Michal...
 
