--- a/_posts/2015-05-30-gcj-2.md
+++ b/_posts/2015-05-30-gcj-2.md
@@ -4,7 +4,7 @@ title: "Google Code Jam (2)"
 ---
 
 This was the first round when I had prepared some templates prior the contest.
-<file cpp>
+{% highlight  cpp %}
 #include <iostream>
 #include <vector>
 
@@ -37,13 +37,13 @@ int main(int argc, char *argv[])
 
         return 0;
 }
-</file>
+{% endhighlight %}
 
 My goal was to win the T-shirt, i.e. be in the first 1000 contestants. I was sligthly surprised that there were four tasks instead of ordinary three --- I assigned uniformly 37 minutes per task.
 
 ===== Problem A (Pegman) =====
 
-I mapped the problem to a graph problem, thought I'd implement it with some graph representation, then I realized I could use the existing grid and began implementing. I spent inappropriate amount of time on input parsing (skipping EOL characters using ''cint >> EOL'', which was not necessary).
+I mapped the problem to a graph problem, thought I'd implement it with some graph representation, then I realized I could use the existing grid and began implementing. I spent inappropriate amount of time on input parsing (skipping EOL characters using `cint >> EOL`, which was not necessary).
 
 After submitting the problem A, I was somewhere around 1200th place and I was a bit behind my schedule (it took me ~50 minutes).
 
