Converted headers, tagged posts

--- a/_posts/2014-12-03-cpp.md
+++ b/_posts/2014-12-03-cpp.md
@@ -1,10 +1,11 @@
 ---
 layout: post
+title: C++ initializers
+tags: c++
 ---
 
-title: "C++"
-
-===== Initializers =====
+Default contructor, primitive types and (possibly nested in GNU) function
+declarations.
 
 {% highlight  cpp %}
 int a;             // unitialized integer
