--- a/_posts/2015-04-13-ssl.md
+++ b/_posts/2015-04-13-ssl.md
@@ -1,8 +1,8 @@
 ---
 layout: post
+title: SSL goodies
+tags: sysadmin apache
 ---
-
-====== SSL goodies ======
 
   * https://wiki.apache.org/httpd/RemoveSSLCertPassPhrase
   * http://wiki.samat.org/CheatSheet/OpenSSL
