--- a/_posts/2015-05-07-memset.md
+++ b/_posts/2015-05-07-memset.md
@@ -1,13 +1,15 @@
 ---
 layout: post
+title: Memset or memberwise zero
+tags: programming
 ---
 
-====== Memset or memberwise zero ======
-
-  * For sure it's premature optimization, thus performance arguments are omitted.
+  * For sure it's premature optimization, thus performance arguments are
+    omitted.
   * Thus it's a question of style.
     * memset
-      * ensures whole struct is zeroed, however hides initialization of individual members (though they are usually meant to be initially zero)
+      * ensures whole struct is zeroed, however hides initialization of
+	individual members (though they are usually meant to be initially zero)
     * memberwise
       * explicitly indicates what we are doing with the structure
       * prone to leaving out some members -> hard to hunt non-deterministic bugs
