--- a/_posts/2015-07-28-move-blog.md
+++ b/_posts/2015-07-28-move-blog.md
@@ -1,12 +1,15 @@
 ---
 layout: post
+title: Should I move this "blog"?
 ---
 
-====== Should I move this "blog"? ======
+Update 2015-08-02: [I moved]({% post_url 2015-07-30-welcome-to-jekyll %}).
 
-Recently, idea of using statically generated blog hosted on Github pages became quite appealing to me. Still I'm hesitating whether it's worth moving from Dokuwiki.
+Recently, idea of using statically generated blog hosted on Github pages became
+quite appealing to me. Still I'm hesitating whether it's worth moving from
+Dokuwiki.
 
-===== Reasons for Dokuwiki =====
+## Reasons for Dokuwiki 
   * more user-friendly editor (not sure, think about Vim)
   * better integration with web (easier inclusion of figures)
   * preview feature
@@ -14,10 +17,11 @@ Recently, idea of using statically generated blog hosted on Github pages became 
   * effectively static pages too (it's cached)
   * easy to set up write access for BFUs (not only instead of comments)
   * accessible revisions/history (could be achieved with raw access to Git too)
-  * neg: difficult creation of new posts (create link to it, the page and the title in the page)
+  * neg: difficult creation of new posts (create link to it, the page and the
+    title in the page)
   * neg: cannot stay on this university hosting
 
-===== Reasons for git + page generator =====
+## Reasons for git + page generator 
   * free/reliable hosting at Github or anywhere else
   * offline editing of posts
   * can move/archive whole blog anywhere as a Git repository
@@ -25,7 +29,7 @@ Recently, idea of using statically generated blog hosted on Github pages became 
   * neg: necessity to fill commit log messages
 
 
-===== Generally good features =====
+## Generally good features 
   * history of edits, possibility to "develop" posts
   * neg?: lack of comments/remarks (either third party or plugin)
 
